# aspeed-lpc-control

./: .gitignore  Makefile.am  README.md  aspeed_lpc.c  aspeed_lpc.h  configure.ac  memboot.c  pnorboot.c
utils/: build.sh
